# AI6_5Team_Advanced_Project

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start-api.bat  start-web.bat  기능_구현_명세.md  기능정리.md
docs/: README.md  team-contributions-and-experiments.md  소상공인을 위한 SNS 광고 콘텐츠 생성·업로드 서비스 상세기획서.md
infra/: README.md
prototypes/: README.md
samples/: README.md
scripts/: README.md  approved_hybrid_inventory.py  capture_history_latest_publish_attempt.mjs  capture_history_publish_status_visibility.mjs  capture_history_recent_publish_attempts_mobile_ui.mjs  capture_history_recent_publish_attempts_ui.mjs  capture_history_scene_plan_preview.mjs  capture_instagram_permission_error_fallback_ui.mjs  capture_project_scene_plan_frames.mjs  capture_quick_action_delta.mjs  capture_scene_lab_frames.mjs  capture_scene_plan_frames.mjs  check_cross_project_variant_publish_guard.mjs  check_generation_timing_and_upload_assist.mjs  check_publish_route_matrix.mjs  check_result_to_publish_package_consistency.mjs  check_stale_variant_publish_guard.mjs  dev-api.mjs  (+80 more)
services/api/: README.md  pyproject.toml
services/api/app/: main.py
services/api/app/api/: routes.py
services/api/app/core/: config.py  database.py  errors.py  rate_limit.py  security.py
services/api/app/models/: README.md
services/api/app/repos/: README.md
services/api/app/schemas/: api.py
services/api/app/services/: audit.py  consent.py  crypto.py  hard_delete.py  runtime.py  session.py  token_svc.py
services/api/tests/: conftest.py  test_api_smoke.py  test_security.py
(+604 files in other folders)
